docs: finalize v1.0.0 release documentation